# distli-bc-mesh

./: .dockerignore  Cargo.toml  GSMA_BWR_Architecture.md  GSM_Roaming_Documentation.md  README.md.ebc  SmartContract_testing.md  TRADING_FEATURES.md  TechRoadmap-BeforeSmartContracts.md  ZK_DEMO_GUIDE.md  ZK_PROOF_IMPLEMENTATION_STEPS.md  ZK_TESTING_GUIDE.md  add_zk_contracts.sh  build_wasm.sh  create_flat_filenames.sh  create_live_zk_data.sh  create_live_zk_data_obsolete.sh  create_zk_data_simple.sh  effort.md  extracted_files.tar  setup_zk_contracts.sh  standalone_zk_dashboard.html  start_multi_country_demo.sh  test_complete_zk_system.sh  test_contracts.rs  test_dashboard_data.py  test_imsi_commitments.sh  test_real_zk_dashboard.sh  test_zk_contracts.sh  test_zk_real_proofs.sh  wasm_fixes.sh  zk_commands.txt  zk_commands_fixed.txt  zk_proof_architecture.md  zk_proof_implementation.txt  zk_test_fixed.sh
Architecture/: SmartContractsArchitecture.docx
data/: enterprise_blockchain_validator1.json  tenant_london.json  tenant_nyc.json  tenant_tokyo.json  tenant_zk_real_proofs.json  tracker_integration.json  zk_live_blockchain_data.json
docker/: docker-compose.yml  setup.sh
docker/data/: enterprise_blockchain_test_validator1.json  enterprise_blockchain_validator1.json
docs/: Architecture.docx
examples/: add_zk_proof_data.rs  create_zk_blockchain_demo.rs  gsm_roaming_test.rs  imsi_commitment_demo.rs  initialize_zk_contracts.rs  private_roaming_demo.rs  test_smart_contracts.rs  trading_test.rs  zk_range_proof_demo.rs
extracted_files/: .gitignore  Cargo.toml  README.md  docker:Dockerfile  docker:docker-compose.yml  docker:nginx.conf  docker:setup.sh  public:index.html  public:js:app.js  public:pkg:distli_mesh_bc.d.ts  public:pkg:distli_mesh_bc.js  public:pkg:distli_mesh_bc_bg.wasm  public:pkg:distli_mesh_bc_bg.wasm.d.ts  public:pkg:package.json  public:styles:main.css  root-README.md  src:blockchain:mod.rs  src:blockchain:mod.rs.backup  src:common:blockchain.rs  src:common:crypto.rs  src:common:mod.rs  src:common:time.rs  src:common:types.rs  src:enterprise_bc:api.rs  src:enterprise_bc:blockchain.rs  src:enterprise_bc:dashboard.rs  src:enterprise_bc:dashboard_main.rs  src:enterprise_bc:mod.rs  src:enterprise_bc:order_engine.rs  src:enterprise_bc:validator.rs  src:enterprise_bc:validator_main.rs  src:lib.rs  src:tracker:integration.rs  src:tracker:mod.rs  src:tracker:server.rs
public/: index.html  smart_contracts_demo.html  zk_NOT_WORKING.html
public/css/: styles.css
public/js/: app.js  blockchain-core.js  blockchain-ui.js  leadership-manager.js  main.js  mesh-manager.js  mesh-network.js  smart-contracts.js  trading.js  ui-controller.js  wasm-loader.js
public/styles/: main.css
src/: blockchain.rs  lib.rs  main.rs  tracker.rs  types.rs  wasm_time.rs
src/blockchain/: mod.rs  mod.rs.backup
src/common/: api_utils.rs  blockchain.rs  contracts.rs  imsi_commitments.rs  mod.rs  (+3 more)
(+13 files in other folders)
